--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,7 @@
 
                 <header>
                     <img src="msitlogo.png">
-                    <h1>Master of Science in Information Technology</h1>
+                    <h1>Master of Science in Information Technology.</h1>
                 </header>
                 <nav>
                     <ul>
